tests/baselines/reference/continueNotInIterationStatement4.errors.txt
==== tests/cases/compiler/continueNotInIterationStatement4.ts (1 errors) ====
    TWO:
    while (true){
      var x = () => {
        continue TWO;
        ~~~~~~~~~~~~~
!!! error TS2204: Jump target cannot cross function boundary.
      }
    }
    